# cmocka

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ChangeLog  CompilerChecks.cmake  ConfigureChecks.cmake  DefineOptions.cmake  INSTALL  INSTALL.md  README  README.md  clib.json  cmocka-config-version.cmake.in  cmocka-config.cmake.in  cmocka.pc.cmake  config.h.cmake  meson.build  package.json
cmake/Modules/: AddCMockaTest.cmake  CheckCCompilerFlagSSP.cmake  DefineCMakeDefaults.cmake  DefineCompilerFlags.cmake  DefineInstallationPaths.cmake  FindNSIS.cmake  UseDoxygen.cmake
coverity/: coverity_assert_model.c
doc/: CMakeLists.txt  Doxyfile.in  doxy.config.in  index.html  mainpage.dox
doc/that_style/: that_style.css
doc/that_style/sass/: _fragment_base.scss  _fragment_color.scss  _menu_bar.scss  _mixins.scss  _nav_tree.scss  _navpath.scss  _search.scss  that_style.scss
example/: CMakeLists.txt  allocate_module.c  allocate_module_test.c  assert_macro_test.c  assert_module.c  assert_module_test.c  calculator.c  calculator_test.c  customer_database.c  customer_database_test.c  key_value_test.c  product_database_test.c  run_tests.c  simple_test.c
example/chef_wrap/: CMakeLists.txt  waiter_test_wrap.c
example/mock/chef_wrap/: chef.c  waiter_test_wrap.c
example/mock/uptime/: CMakeLists.txt  test_uptime.c
example/uptime/: CMakeLists.txt  README.md  proc_uptime.c  test_uptime.c  uptime.c
include/: CMakeLists.txt  cmocka.h  cmocka_private.h  cmocka_version.h.cmake
src/: CMakeLists.txt  cmocka.c  cmocka.def  cmockery.c  cmockery.def
src/example/: CMakeLists.txt  allocate_module.c  allocate_module_test.c  assert_macro_test.c  assert_module_test.c  calculator.c  calculator_test.c  customer_database.c  customer_database_test.c  key_value.c  key_value_test.c  product_database.c  product_database_test.c  run_tests.c
src/google/: CMakeLists.txt  cmockery.h
src/include/: cmocka.h
tests/: CMakeLists.txt  cmocka_test.cmake  ctest-default.cmake  meson.build  test_alloc.c  test_assert_macros.c  test_assert_macros_fail.c  test_assert_range.c  test_assert_range_fail.c  test_assert_u_int.c  test_assert_u_int_fail.c  test_basics.c  test_cmockery.c  test_double_macros.c  test_exception_handler.c  test_expect_check.c  test_expect_check_fail.c  test_fixtures.c  test_float_macros.c  test_group_fixtures.c  test_group_setup_assert.c  test_group_setup_fail.c  test_groups.c  test_ordering.c  test_ordering_fail.c  test_returns.c  test_returns_fail.c  test_setup_fail.c  test_skip.c  test_skip_filter.c  test_stop.c  test_stop_fail.c  test_string.c  test_strmatch.c  test_wildcard.c
